#RI-5708 - fix option word-wrap

--- a/redisinsight/ui/src/pages/rdi/pipeline-management/components/jobs-panel/styles.module.scss
+++ b/redisinsight/ui/src/pages/rdi/pipeline-management/components/jobs-panel/styles.module.scss
@@ -189,6 +189,10 @@ $animation-duration: 300ms;
 }
 
 :global {
+  .euiContextMenuItem__text {
+    word-wrap: break-word;
+  }
+
   .rdi-dry-run {
     &__codeBlock {
       @include eui.scrollBar;
